mmsb-core.bak.orig/tests/compile_fail/construct_token.rs
use mmsb_judgment::JudgmentToken;

fn main() {
    let _token = JudgmentToken { _private: () };
}
